# dem4water

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  README_COLLAB.md  area_mapping.py  compute_hsv.pbs  convert_shp_to_geojson.py  cut_contourlines.py  cutline_score.py  gen_contourline_polygons.sh  generate_cmd.py  generate_list_from_DB.py  pyproject.toml  report_campaign.py  run_processors.py  setup.cfg  setup.py  szi_from_contourline.py  szi_from_watermap.py  szi_to_model.py  utils.py  val_report.py
.gitlab/issue_templates/: Bug.md  Default.md
data/: DB_Andalousie_V3.geojson  DB_v5_KL.geojson  GroundTruth_DB_swot.json  validation_DB.json
data/DB_Barrages_Fixed_v3/: DB_Barrages_Fixed.dbf  DB_Barrages_Fixed.shp  DB_Barrages_Fixed.shx
data/andalousie/: andalousie.cfg  campaign_andalousie_params.json
data/occitanie/: campaign_occitanie_params.json  occitanie.lst  occitanie_ref.json  (+4 more)
dem4water/: __init__.py  area_mapping.py  area_mapping_v2.py  area_mapping_v2.py~  cli.py  compute_model.py  cut_contourlines.py  cutline_score.py  find_cutline_and_pdb.py  find_pdb_and_cutline.py  gen_contourline_polygons.sh  plot_lib.py  szi_from_contourline.py  szi_from_watermap.py  szi_to_model.py  val_report.py  water_body.py
docs/: README_FR.md  old_readme.md  trend_report.md
helper/: camp.pbs  camp.sh  camp_30.sh  map.sh  pkg_results.sh  run_andalousie.sh  score.sh  test.sh
notebook/: demo_colab.ipynb  demo_local.ipynb
perf/: gen_report.py
src/: compute_model.py  plot_lib.py  water_body.py
(+44 files in other folders)
